--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "http-proxy": "^1.17.0",
     "morgan": "^1.9.1",
     "path": "^0.12.7"
   }
