--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "proxy server",
   "main": "index.js",
   "scripts": {
-    "start": "node ./server/index.js",
-    "nodemon": "nodemon ./server/index.js"
+    "start": "nodemon ./server/index.js"
   },
   "repository": {
     "type": "git",
@@ -20,8 +19,10 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "http": "0.0.0",
     "http-proxy": "^1.17.0",
     "morgan": "^1.9.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "request": "^2.88.0"
   }
 }
